# websockets

./: main.py  pyproject.toml
templates/: home.html
