[project]
name = "websockets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.7",
    "groq>=0.15.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "setuptools>=75.8.0",
    "uvicorn>=0.34.0",
    "websocket>=0.2.1",
]
